syntax = "proto3";
option go_package = "github.com/mihnea1711/POS_Project/services/idm/idm/proto_files";

// Helper messages
message Info {
    string Message = 1;
    int64 Status = 2;
}

message EmptyRequest {
    int64 Page = 1;
    int64 Limit = 2;
}

message InfoResponse {
    Info Info = 1;
}

message EnhancedInfoResponse {
    int64 RowsAffected = 1;
    Info Info = 2;
}

message IDInfoResponse {
  int64 LastInsertID = 1;
  Info Info = 2;
}

message HealthCheckRequest {
    string service = 1;
  }
  
  message HealthCheckResponse {
    enum ServingStatus {
      UNKNOWN = 0;
      SERVING = 1;
      NOT_SERVING = 2;
      SERVICE_UNKNOWN = 3;
    }
    ServingStatus status = 1;
  }